# Project-ShutTheFrontDoor

./: .gitignore  Project_Discussion.md  README.md
Back End/: README  loadCheck.js
Back End/Portal/: HELP.md  pom.xml
Back End/devices/: Dockerfile  HELP.md  pom.xml
Back End/email/: Dockerfile  pom.xml
Back End/media-directory/: go.mod  (+2 more)
Front End/: README
Hardware/: Battery-Voltage-Monitor.txt  ESP32 Boot Mode Selection · espressif_esptool Wiki.html  Mini Battery and Solar Powered Timelapse Camera – Brett Beeson.html  README_Prog_ESP32.txt  circuit-20210406-2030.circuitjs.txt
Hardware/ESP/cam-app/components/peripherals/: CMakeLists.txt  connect.c  http_server.c  stfd_camera.c  stfd_gcp_client.c  stfd_gpio.c  stfd_http_client.c  stfd_mqtt_client.c  stfd_sdcard.c  stfd_tcp_client.c  stfd_udp_client.c  stfd_wifi_scan.c
Hardware/ESP/cam-app/components/peripherals/certs/: ca_cert.pem  rsa_cert.csr
Hardware/ESP/cam-app/components/peripherals/include/: http_server.h  stfd_comms.h  stfd_gpio_config.h  stfd_peripherals.h
Hardware/ESP/main-app/components/peripherals/: CMakeLists.txt  README.txt  stfd_camera.c  stfd_gcp_client.c  stfd_gpio.c  stfd_http_client.c  stfd_mqtt_client.c  stfd_peripherals.h  stfd_udp_client.c  stfd_wifi_scan.c
Hardware/ESP/main-app/components/peripherals/certs/: ca_private.pem
Hardware/ESP/main-app/components/peripherals/include/: stfd_comms.h  stfd_gpio_config.h  stfd_peripherals.h
Sketches/: UML.graffle  baseIcon.vectornator  camera_logo.vectornator  doorhub_logo.vectornator  notifications.vectornator  software flowcharts.graffle
(+382 files in other folders)
